--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1293,7 +1293,7 @@ ul.about-listing {
 -----------------------------------------------------------------*/
 
 .package-one {
-	margin-bottom: 30px;
+	/* margin-bottom: 30px; */
 	overflow: hidden;
 	position: relative;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
