--- a/public/css/custom_a.css
+++ b/public/css/custom_a.css
@@ -115,3 +115,9 @@ bottom   : 0;
 	margin-bottom: 15px;
 }
 
+.nowrap {
+    text-overflow: ellipsis !important; 
+    overflow: hidden !important; 
+    white-space: nowrap !important;
+}
+
